--- a/slides.css
+++ b/slides.css
@@ -23,7 +23,18 @@ section.left {
   text-align: left;
 }
 
+code {
+  font-family: Menlo,monospace,Courier;
+  background-color: #E7EBFD;
+  padding: 2px 6px;
+  border-radius: 4px;
+  font-size: smaller;
+}
+
 pre code {
+  font-size: unset;
+  padding: unset;
+  background-color: unset;
   line-height: var(--code-line-height) !important;
   min-height: unset !important;
   overflow: auto !important;
